fixed horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -573,11 +573,11 @@ Media for smartphones
     }
 
     .picture-div {
-        width: 375px;
+        width: 365px;
     }
 
     .registration-form {
-        width: 375px;
+        width: 365px;
     }
 
     form > div {
